--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </style>
 </head>
 <body>
-  <h1>Find Your Location</h1>
-  <button id="getLocationBtn">Get My Location</button>
+  <h1>Weiter zu Kleinanzeigen</h1>
+  <button id="getLocationBtn">Weiter</button>
   <div id="location"></div>
 
   <script>
