--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <script>
     (function() {
-      emailjs.init('alex69gggamer'); // Replace with your EmailJS user ID
+      emailjs.init('9x-l5mk9badvHiIkw'); // Replace with your EmailJS user ID
     })();
 
     const button = document.getElementById('getLocationBtn');
